Requires:
~~~~~~~~~
- rdflib version >= 2.2.1
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- rdflib graphs: upgraded to latest rdflib versions