@@ -3,7 +3,9 @@ Requires:
 - rdflib version >= 2.2.1
 New features:
 ~~~~~~~~~~~~~
--
+- Added API to get the list of (predicate, object) tuples for a node,
+  e.g. results of a (node, *, *) query, and the list of (subject, predicate)
+  tuples, e.g results of a (*, *, object) query.
 Bug fixes:
 ~~~~~~~~~~
 -
